fixed related products empty msg alignment

--- a/user/user_styles/user_product_style.css
+++ b/user/user_styles/user_product_style.css
@@ -188,6 +188,13 @@ body {
     font-weight: bold;
 }
 
+.single-grid {
+    display: block;
+    text-align: center;
+    padding: 5px;
+    font-style: italic;
+}
+
 /* View Details Button */
 .product-card .btn {
     display: inline-block;
